--- a/info.plist
+++ b/info.plist
@@ -194,6 +194,10 @@
 			<integer>150</integer>
 		</dict>
 	</dict>
+	<key>variablesdontexport</key>
+	<array/>
+	<key>version</key>
+	<string>v1</string>
 	<key>webaddress</key>
 	<string></string>
 </dict>
