--- a/info.plist
+++ b/info.plist
@@ -197,7 +197,7 @@
 	<key>variablesdontexport</key>
 	<array/>
 	<key>version</key>
-	<string>v1</string>
+	<string>1</string>
 	<key>webaddress</key>
 	<string></string>
 </dict>
